Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4050

Crash when buckets=0 is configured in cache_promote plugin

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.1.0
    • Plugins
    • None

    Description

      I configured buckets=0 for cache_promote plugin and traffic server is crashing with following backtrace.

      (gdb) bt
      #0 0x00007f71240b97d3 in std::_List_node_base::transfer(std::_List_node_base*, std::_List_node_base*) () from /usr/lib64/libstdc++.so.6
      #1 0x00007f711c8eb4f8 in _M_transfer (this=0x7f71299c7850, txnp=<value optimized out>) at /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/bits/stl_list.h:1400
      #2 splice (this=0x7f71299c7850, txnp=<value optimized out>) at /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/bits/stl_list.h:1187
      #3 LRUPolicy::doPromote (this=0x7f71299c7850, txnp=<value optimized out>) at cache_promote.cc:253
      #4 0x00007f711c8ea758 in cont_handle_policy (contp=0x7f71299a2f40, event=<value optimized out>, edata=0x7f712f8a2970) at cache_promote.cc:397
      #5 0x00007f7126de559a in HttpSM::state_api_callout (this=0x7f712f8a2970, event=<value optimized out>, data=<value optimized out>) at HttpSM.cc:1381
      #6 0x00007f7126de6ef0 in do_api_callout (this=0x7f712f8a2970, event=<value optimized out>, data=0xffffffffffffb050) at HttpSM.cc:442
      #7 setup_cache_lookup_complete_api (this=0x7f712f8a2970, event=<value optimized out>, data=0xffffffffffffb050) at HttpSM.cc:2450
      #8 HttpSM::state_cache_open_read (this=0x7f712f8a2970, event=<value optimized out>, data=0xffffffffffffb050) at HttpSM.cc:2511
      #9 0x00007f7126de6be8 in HttpSM::main_handler (this=0x7f712f8a2970, event=1103, data=0xffffffffffffb050) at HttpSM.cc:2553
      #10 0x00007f7126dc94a2 in handleEvent (this=0x7f712f8a4398, event=1103, data=0xffffffffffffb050) at ../../iocore/eventsystem/I_Continuation.h:145
      #11 HttpCacheSM::state_cache_open_read (this=0x7f712f8a4398, event=1103, data=0xffffffffffffb050) at HttpCacheSM.cc:131
      #12 0x00007f7126f44e56 in Cache::open_read (this=<value optimized out>, cont=0x7f712f8a4398, key=<value optimized out>, request=0x7f712f8a3078, params=0x7f712f8a2a50, type=<value optimized out>,
      #13 0x00007f7126f20fb8 in open_read (this=<value optimized out>, cont=0x7f712f8a4398, url=0x7f712f8a3090, cluster_cache_local=<value optimized out>, request=0x7f712f8a3078, params=0x7f712f8a2a50, pin_in_cache=0, type=CACHE_FRAG_TYPE_HTTP)
      at P_CacheInternal.h:1074
      #14 CacheProcessor::open_read (this=<value optimized out>, cont=0x7f712f8a4398, url=0x7f712f8a3090, cluster_cache_local=<value optimized out>, request=0x7f712f8a3078, params=0x7f712f8a2a50, pin_in_cache=0, type=CACHE_FRAG_TYPE_HTTP) at Cache.cc:3598
      #15 0x00007f7126dc8eed in do_cache_open_read (this=<value optimized out>, url=<value optimized out>, hdr=<value optimized out>, params=<value optimized out>, pin_in_cache=<value optimized out>) at HttpCacheSM.cc:211
      #16 HttpCacheSM::open_read (this=<value optimized out>, url=<value optimized out>, hdr=<value optimized out>, params=<value optimized out>, pin_in_cache=<value optimized out>) at HttpCacheSM.cc:243
      #17 0x00007f7126dd723e in HttpSM::do_cache_lookup_and_read (this=0x7f712f8a2970) at HttpSM.cc:4388
      #18 0x00007f7126deee42 in HttpSM::set_next_state (this=0x7f712f8a2970) at HttpSM.cc:6997
      #19 0x00007f7126df205f in HttpSM::handle_api_return (this=0x7f712f8a2970) at HttpSM.cc:1517
      #20 0x00007f7126de5738 in HttpSM::state_api_callout (this=0x7f712f8a2970, event=0, data=0x0) at HttpSM.cc:1455
      #21 0x00007f7126deec85 in HttpSM::set_next_state (this=0x7f712f8a2970) at HttpSM.cc:6887
      #22 0x00007f7126deec75 in HttpSM::set_next_state (this=0x7f712f8a2970) at HttpSM.cc:6901
      #23 0x00007f7126df205f in HttpSM::handle_api_return (this=0x7f712f8a2970) at HttpSM.cc:1517
      #24 0x00007f7126de5738 in HttpSM::state_api_callout (this=0x7f712f8a2970, event=0, data=0x0) at HttpSM.cc:1455
      #25 0x00007f7126deec85 in HttpSM::set_next_state (this=0x7f712f8a2970) at HttpSM.cc:6887
      #26 0x00007f7126df205f in HttpSM::handle_api_return (this=0x7f712f8a2970) at HttpSM.cc:1517
      #27 0x00007f7126de5738 in HttpSM::state_api_callout (this=0x7f712f8a2970, event=0, data=0x0) at HttpSM.cc:1455
      #28 0x00007f7126deec85 in HttpSM::set_next_state (this=0x7f712f8a2970) at HttpSM.cc:6887
      #29 0x00007f7126de3515 in HttpSM::state_read_client_request_header (this=0x7f712f8a2970, event=100, data=<value optimized out>) at HttpSM.cc:777
      #30 0x00007f7126de6be8 in HttpSM::main_handler (this=0x7f712f8a2970, event=100, data=0x7f712f705e58) at HttpSM.cc:2553
      #31 0x00007f7126df204c in handleEvent (this=0x7f712f8a2970) at ../../iocore/eventsystem/I_Continuation.h:145
      #32 setup_client_read_request_header (this=0x7f712f8a2970) at HttpSM.cc:603
      #33 HttpSM::handle_api_return (this=0x7f712f8a2970) at HttpSM.cc:1498
      #34 0x00007f7126de5738 in HttpSM::state_api_callout (this=0x7f712f8a2970, event=0, data=0x0) at HttpSM.cc:1455
      #35 0x00007f7126de9354 in do_api_callout_internal (this=0x7f712f8a2970, client_vc=<value optimized out>, buffer_reader=<value optimized out>) at HttpSM.cc:4888
      #36 do_api_callout (this=0x7f712f8a2970, client_vc=<value optimized out>, buffer_reader=<value optimized out>) at HttpSM.cc:442
      #37 state_add_to_list (this=0x7f712f8a2970, client_vc=<value optimized out>, buffer_reader=<value optimized out>) at HttpSM.cc:469
      #38 HttpSM::attach_client_session (this=0x7f712f8a2970, client_vc=<value optimized out>, buffer_reader=<value optimized out>) at HttpSM.cc:581
      #39 0x00007f7126dc9e57 in HttpClientSession::new_transaction (this=0x7f712f7ad2a0) at HttpClientSession.cc:135
      #40 0x00007f7126d2aa81 in state_api_callout (this=0x7f712f7ad2a0, id=<value optimized out>) at ProxyClientSession.cc:119
      #41 ProxyClientSession::do_api_callout (this=0x7f712f7ad2a0, id=<value optimized out>) at ProxyClientSession.cc:145
      #42 0x00007f7126dcbc79 in HttpClientSession::new_connection (this=0x7f712f7ad2a0, new_vc=<value optimized out>, iobuf=<value optimized out>, reader=0x7f712f70f458, backdoor=false) at HttpClientSession.cc:206
      #43 0x00007f7126dc5d2b in HttpSessionAccept::accept (this=0x7f71298fbe00, netvc=0x7f712f705d40, iobuf=0x7f712f70f440, reader=0x7f712f70f458) at HttpSessionAccept.cc:74
      #44 0x00007f7126d29eaa in ProtocolProbeTrampoline::ioCompletionEvent (this=0x7f7129a55d20, event=<value optimized out>, edata=<value optimized out>) at ProtocolProbeSessionAccept.cc:122
      #45 0x00007f7126f7ffbd in handleEvent (event=<value optimized out>, vc=0x7f712f705d40) at ../../iocore/eventsystem/I_Continuation.h:145
      #46 read_signal_and_update (event=<value optimized out>, vc=0x7f712f705d40) at UnixNetVConnection.cc:139
      #47 0x00007f7126f836c5 in read_from_net (nh=0x7f712b673750, vc=0x7f712f705d40, thread=0x7f712b670000) at UnixNetVConnection.cc:352
      #48 0x00007f7126f77272 in NetHandler::mainNetEvent (this=0x7f712b673750, event=<value optimized out>, e=<value optimized out>) at UnixNet.cc:546
      #49 0x00007f7126fa5f28 in handleEvent (this=0x7f712b670000, e=0x7f712c224b60, calling_code=5) at I_Continuation.h:145
      #50 EThread::process_event (this=0x7f712b670000, e=0x7f712c224b60, calling_code=5) at UnixEThread.cc:128
      #51 0x00007f7126fa6a7a in EThread::execute (this=0x7f712b670000) at UnixEThread.cc:252
      --Type <return> to continue, or q <return> to quit--
      #52 0x00007f7126fa52fa in spawn_thread_internal (a=0x7f7129a4adf0) at Thread.cc:85
      #53 0x00007f71257cc9d1 in start_thread () from /lib64/libpthread.so.0
      #54 0x00007f71239108fd in clone () from /lib64/libc.so.6

      Attachments

        Activity

          People

            meeramn Meera Mosale Nataraja
            meeramn Meera Mosale Nataraja
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: