TS-4050 - Fix trafficserver crash when buckets=0 is configured in cache_promote plugin and Set buckets default value to be 10